# Handraw

./: .gitignore  CMakeLists.txt  MyBGSubtractorColor.cpp  MyBGSubtractorColor.h  README.md  main.cpp  means.txt
src/: .MyBGSubtractorColor.cpp.swp  .MyBGSubtractorColor.h.swp  .cvui.h.swp  .main.cpp.swp  .main.h.swp  HandGesture.cpp  HandGesture.h  MyBGSubtractorColor.cpp  MyBGSubtractorColor.h  main.cpp
